testCases/keywords/test6.uni
main(){

	busExpr = 100111b; //valid 
	for = 11111100b; //error
	out:;
}
neigh!
